--- a/configs/firstorder_vox_256.yaml
+++ b/configs/firstorder_vox_256.yaml
@@ -5,10 +5,10 @@ dataset:
   train:
     name: FirstOrderDataset
     batch_size: 8
-    num_workers: 4
+    num_workers: 0
     use_shared_memory: False
     phase: train
-    dataroot: data/first_order/Voxceleb/
+    dataroot: /home/paddle/PaddleGAN/data/first_order/Voxceleb
     frame_shape: [256, 256, 3]
     id_sampling: True
     pairs_list: None
@@ -27,7 +27,7 @@ dataset:
         keys: [image, image]
   test:
     name: FirstOrderDataset
-    dataroot: data/first_order/Voxceleb/
+    dataroot: /home/paddle/PaddleGAN/data/first_order/Voxceleb
     phase: test
     batch_size: 1
     num_workers: 1
@@ -38,7 +38,7 @@ dataset:
 
 
 model:
-  name: FirstOrderModel
+  name: FirstOrderModelOFA
   common_params:
     num_kp: 10
     num_channels: 3
@@ -115,11 +115,13 @@ log_config:
   visiual_interval: 10
 
 validate:
-  interval: 3000
+  interval: 1000000000000000
   save_img: false
+  metrics: 
 
 snapshot_config:
   interval: 10
 
 optimizer:
   name: Adam
+  beta1: 0.5
